--- a/TODO
+++ b/TODO
@@ -1,3 +1,13 @@
-- Port daemons
-- add Delete support to sprints_edit page
-- navigation: next/prev sprint
+Bugs:
+- Graph Scale (set min to 0 when not logged in)
+- Fix remaining hours on the Grid
+
+Features:
+- Port email daemon
+- Add Delete support to sprints_edit page
+- Titles
+- Detect and prevent sprint overlap
+- Navigation: next/prev sprint
+- Inactive Sprint warning
+- Bookmarket
+- Grid: Assigned to -> First Name / Last Name (usernames are irrelevant)
