Add back in the reminder email, and make it slightly less annoying than last time

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 Features:
-- Port email daemon
 - Add Delete support to sprints_edit page
 - Bookmarklet
+- Make bugzilla smarter.  Check cookies and don't try to log in again if we have them.
