--- a/README
+++ b/README
@@ -14,6 +14,7 @@ To install:
     - mysql-python
     - simplejson
     - beautifulsoup
+    - dateutil
     - twill (for Bugzilla Novell backend only)
 
  * Copy local_settings.py.in to local_settings.py.  Configure your settings in
